# Gray

./: .gitattributes  HipJoint.SLDPRT  HipJoint_4.0_.STL  HipJoint_Test_Piece.SLDPRT  HipJoint_Test_Piece_1.0.STL  Leg_Universal.SLDPRT  Leg_Universal.STL  Links to Read.docx  README.md  Thigh_Right_Side.SLDPRT  desktop.ini
+misc/: IMG_4149.heic  Links to Read.docx
Overview/: IMG_5251.HEIC  IMG_5269.HEIC  IMG_5270.HEIC
Parts/: Assem3.SLDASM  Battery plate.SLDPRT  DS3218MG_MS24_Digital_Servo_270.SLDPRT  Feet.SLDPRT  HipJoint.SLDPRT  HipJoint_Test_Piece_1.0.STL  Left Thigh.SLDPRT  Left_Thigh.SLDPRT  Leg_Universal.SLDPRT  Leg_Universal.STL  Raspberry_Pi_4_Model_B.STEP  Right_Thigh.SLDPRT  Servo Arm for DS3218MG.SLDPRT  Thigh_Right_Side.SLDPRT
Parts/++GREY_URDF/: CMakeLists.txt  package.xml
Parts/++GREY_URDF/config/: joint_names_Main_URDF_Assembly.SLDASM.yaml
Parts/++GREY_URDF/launch/: display.launch  gazebo.launch
Parts/++GREY_URDF/meshes/: BL_Bottom.STL  BL_Top.STL  BR_Bottom.STL  BR_Top.STL  FL_Bottom.STL  FL_HIP.STL  FL_Top.STL  FR_Bottom.STL  FR_Top.STL  Main_Body.STL
Parts/++GREY_URDF/urdf/: Main_URDF_Assembly.SLDASM.csv  Main_URDF_Assembly.SLDASM.urdf
planning/: IMG_4146.heic  IMG_4154.heic
robot/: Bottom plate battery.SLDPRT  Bottom plate battery.STL  Full Cover - Cover-1.STL  Top Plate Computer 2.0.STL  Top Plate Computer.SLDPRT
servo-ds3218mg-1.snapshot.4/: DIGITAL SERVO ASSEMBLY.SLDASM  DS3218MG MS24 Digital Servo 270.SLDPRT  HX1838 IR Receiver.SLDPRT  IGES Momentary Switch Red Cap.IGS  IGES Servo Arm for DS3218MG.IGS  STEP HX1838 IR Receiver.STEP  (+17 more)
(+165 files in other folders)
